--- a/myhpi/locale/de/LC_MESSAGES/django.po
+++ b/myhpi/locale/de/LC_MESSAGES/django.po
@@ -135,10 +135,14 @@ msgstr "Vorheriges Protokoll"
 msgid "Next minutes"
 msgstr "Nächstes Protokoll"
 
-#: myhpi/core/templates/core/minutes_list.html:15
+#: myhpi/core/templates/core/minutes_list.html:14
 #: myhpi/core/templates/core/sidebar.html:7
 msgid "Page has unpublished changes!"
 msgstr "Seite hat unveröffentlichte Änderungen!"
+
+#: myhpi/core/templates/core/minutes_list.html:33
+msgid "No minutes available for this year."
+msgstr "Keine Protokolle für dieses Jahr verfügbar."
 
 #: myhpi/core/templates/core/sidebar.html:13
 msgid "Visibility"
