revert minor changes

--- a/myhpi/locale/de/LC_MESSAGES/django.po
+++ b/myhpi/locale/de/LC_MESSAGES/django.po
@@ -475,8 +475,8 @@ msgstr "Liste Löschen"
 #| "\t"
 msgid ""
 "\n"
-"            Are you sure you want to delete the list %(listname)s?\n"
-"        "
+"\t\tAre you sure you want to delete the list %(listname)s?\n"
+"\t"
 msgstr ""
 "\n"
 "\t\tMöchtest du die Liste %(listname)s wirklich löschen?\n"
@@ -504,8 +504,8 @@ msgstr "Liste verwalten"
 #| "\t"
 msgid ""
 "\n"
-"            This is the admin view for the owners of %(listname)s\n"
-"        "
+"\t\tThis is the admin view for the owners of %(listname)s\n"
+"\t"
 msgstr ""
 "\n"
 "\t\tDas ist die Ansicht für die Admins der Liste %(listname)s\n"
@@ -545,9 +545,9 @@ msgstr "Mitgliedschaft verwalten"
 #| "\t"
 msgid ""
 "\n"
-"        Enter the e-mail address you want to un-/subscribe from/to "
+"\t\tEnter the e-mail address you want to un-/subscribe from/to "
 "%(list_name)s\n"
-"    "
+"\t"
 msgstr ""
 "\n"
 "\t\tGib die E-Mailadresse ein, die du von %(list_name)s an-/abmelden "
